--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
-    <TextView
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Hello World!"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/toolbar" />
+
+     <ScrollView
+         android:layout_width="match_parent"
+         android:layout_height="match_parent">
+
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:orientation="vertical"
+             android:layout_gravity="center">
+
+             <EditText
+                 android:id="@+id/edtDistancia"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_marginHorizontal="32dp"
+                 android:layout_gravity="center"
+                 android:inputType="number"
+                 android:textColor="@color/TextColorMain"
+                 android:hint="Distância"/>
+
+             <TextView
+                 android:id="@+id/txtDistancia"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="Total de quilômetros"
+                 android:layout_gravity="center"
+                 android:textStyle="italic"
+                 android:alpha="0.6"/>
+
+             <EditText
+                 android:id="@+id/edtPreco"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_marginHorizontal="32dp"
+                 android:layout_gravity="center"
+                 android:inputType="number"
+                 android:textColor="@color/TextColorMain"
+                 android:hint="Preço"
+                 android:layout_marginTop="32dp"/>
+
+             <TextView
+                 android:id="@+id/txtPreco"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="Preço por Litro "
+                 android:layout_gravity="center"
+                 android:textStyle="italic"
+                 android:alpha="0.6"/>
+
+
+             <EditText
+                 android:id="@+id/edtAuto"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:layout_marginHorizontal="32dp"
+                 android:layout_gravity="center"
+                 android:inputType="number"
+                 android:textColor="@color/TextColorMain"
+                 android:hint="Autonomia"
+                 android:layout_marginTop="32dp"/>
+
+             <TextView
+                 android:id="@+id/txtAuto"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="KMs por Litro"
+                 android:textStyle="italic"
+                 android:layout_gravity="center"
+                 android:alpha="0.6"/>
+
+             <TextView
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:text="SEU GASTO TOTAL SERÁ DE:"
+                 android:textSize="16sp"
+                 android:layout_gravity="center"
+                 android:textStyle="bold"
+                 android:alpha="0.6"
+                 android:layout_marginTop="64dp"/>
+
+             <TextView
+                 android:id="@+id/txtReais"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="12dp"
+                 android:text="R$ 0"
+                 android:textColor="@color/Toolbar"
+                 android:layout_gravity="center"
+                 android:textSize="34sp"/>
+
+             <Button
+                 android:id="@+id/btnCalcula"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:padding="16dp"
+                 android:layout_marginHorizontal="32dp"
+                 android:text="Calcular"
+                 app:backgroundTint="@color/ButtonCalcular"
+                 android:layout_marginTop="12dp"
+                 android:layout_gravity="center"
+                 android:textAllCaps="true"/>
+
+         </LinearLayout>
+
+     </ScrollView>
+
+</LinearLayout>
