--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
              android:layout_gravity="center">
 
              <EditText
-                 android:id="@+id/edtDistancia"
+                 android:id="@+id/edt_Distancia"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="32dp"
@@ -32,7 +32,7 @@
                  android:hint="Distância"/>
 
              <TextView
-                 android:id="@+id/txtDistancia"
+                 android:id="@+id/txt_Distancia"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Total de quilômetros"
@@ -41,7 +41,7 @@
                  android:alpha="0.6"/>
 
              <EditText
-                 android:id="@+id/edtPreco"
+                 android:id="@+id/edt_Preco"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="32dp"
@@ -52,7 +52,7 @@
                  android:layout_marginTop="32dp"/>
 
              <TextView
-                 android:id="@+id/txtPreco"
+                 android:id="@+id/txt_Preco"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="Preço por Litro "
@@ -62,7 +62,7 @@
 
 
              <EditText
-                 android:id="@+id/edtAuto"
+                 android:id="@+id/edt_Auto"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="32dp"
@@ -73,7 +73,7 @@
                  android:layout_marginTop="32dp"/>
 
              <TextView
-                 android:id="@+id/txtAuto"
+                 android:id="@+id/txt_Auto"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="KMs por Litro"
@@ -92,7 +92,7 @@
                  android:layout_marginTop="64dp"/>
 
              <TextView
-                 android:id="@+id/txtReais"
+                 android:id="@+id/txt_Valor_Total"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="12dp"
@@ -102,7 +102,7 @@
                  android:textSize="34sp"/>
 
              <Button
-                 android:id="@+id/btnCalcula"
+                 android:id="@+id/btn_Calcula"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="16dp"
