--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,6 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -46,7 +45,7 @@
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="32dp"
                  android:layout_gravity="center"
-                 android:inputType="number"
+                 android:inputType="numberDecimal"
                  android:textColor="@color/TextColorMain"
                  android:hint="Preço"
                  android:layout_marginTop="32dp"/>
@@ -67,7 +66,7 @@
                  android:layout_height="wrap_content"
                  android:layout_marginHorizontal="32dp"
                  android:layout_gravity="center"
-                 android:inputType="number"
+                 android:inputType="numberDecimal"
                  android:textColor="@color/TextColorMain"
                  android:hint="Autonomia"
                  android:layout_marginTop="32dp"/>
